asteria/core/tests/errors/elaboration_errors/incorrect_type_for_application_term_function.asteriacore
f : forall {a : Type}. a -> a
  = \{a} -> \x -> Test$f x
  ;;
